--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
-    <title>Cesium地球</title>
+    <link rel="shortcut icon" href="image/icon.png" type="image/x-icon">
+    <title>Cesium地球模式</title>
     <link rel="stylesheet" href="Cesium/Widgets/widgets.css">
     <script type="text/javascript" src="Cesium/Cesium.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <style>
         html,body,#cesiumContainer{
             width: 100vw;
@@ -19,6 +21,7 @@
 </head>
 <body>
     <div id="cesiumContainer"></div>
+
     <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
